# thingsee-stm32cubemx

./: .gitignore  .mxproject  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  STM32L162VEYx_FLASH.ld  pinout.csv  thingsee.ioc
App/: CMakeLists.txt  Display.cxx  Display.h  app.cxx  app.h
Drivers/STM32L1xx_HAL_Driver/Src/: CMakeLists.txt
Drivers/thingsee/: Display.cxx  Display.h  Serial.cxx  Serial.h
Inc/: main.h  stm32l1xx_hal_conf.h  stm32l1xx_it.h  usb_device.h  usbd_conf.h
Middlewares/u8g2/: CMakeLists.txt
Src/: CMakeLists.txt  main.c  stm32l1xx_hal_msp.c  stm32l1xx_it.c  usbd_conf.c
